add exam structure rules and keywords

--- a/istqb-ctfl-cheat-sheet.tex
+++ b/istqb-ctfl-cheat-sheet.tex
@@ -14,6 +14,10 @@
 \usepackage{svg}
 \usepackage{float}
 \usepackage{ifthen}
+\usepackage{multirow}
+\usepackage{colortbl}
+\usepackage{caption}
+
 
 \setmainfont[BoldFont={Montserrat-Medium}]{Montserrat-Regular}
 \renewcommand{\baselinestretch}{0.9}
@@ -24,7 +28,7 @@
 
 % TikZ styles
 \tikzstyle{mybox} = [draw=black, fill=white, very thick,
-    rectangle, rounded corners, inner sep=5pt, inner ysep=14pt, minimum height=1cm, anchor=north]
+    rectangle, rounded corners, inner sep=5pt, inner ysep=14pt, minimum height=5cm, text centered, anchor=north]
 
 \tikzstyle{fancytitle} = [
     draw=black,
@@ -154,9 +158,6 @@ Human beings make errors (mistakes), which produce defects (faults, bugs), which
     \item \textbf{Independence of Testing:}
     Independent testers recognize different kinds of failures and defects, but may be isolated from the development team, causing poor collaboration.
 \end{itemize}
-
-%\section*{DevOps and Testing}
-%DevOps promotes team autonomy, fast feedback, integrated toolchains, and technical practices like continuous integration (CI) and continuous delivery (CD). Using CI and even better CD as it comes with fast feedback and automated component tests to accompany source code when it is submitted to the code repository.
 }
 
 %------------ 2. Testing Throughout the SDLC ---------------
@@ -225,7 +226,7 @@ In contrast to dynamic testing, in static testing the software under test does n
 \item Static testing can be applied to non-executable work products.
 \end{itemize}
 
-\section*{Early and Frequent Stakeholder Feedback}
+\section*{Stakeholder Feedback}
 Early and frequent feedback allows for the early communication of potential quality problems.\\
 
 \section*{Review Process Activities}
@@ -261,8 +262,8 @@ Early and frequent feedback allows for the early communication of potential qual
 \section*{Test Techniques}
 \begin{itemize}
 
-\item \textbf{Black-box Test Techniques}\\
-Black-box test techniques (also known as specification-based techniques) are based on an analysis of the specified behavior of the test object without reference to its internal structure. Therefore, the test cases are independent of how the software is implemented.
+\item \textbf{Black-box Test Techniques (specification-based)}\\
+Analysis of the specified behavior of the test object without reference to its internal structure. Therefore, the test cases are independent of how the software is implemented.
 
 \begin{itemize}
     \item Equivalence Partitioning
@@ -271,8 +272,8 @@ Black-box test techniques (also known as specification-based techniques) are bas
     \item State Transition Testing
 \end{itemize}
 
-\item \textbf{White-box Test Techniques}\\
-White-box test techniques (also known as structure-based techniques) are based on an analysis of the test object’s internal structure and processing. As the test cases are dependent on how the software is designed, they can only be created after the design or implementation of the test object.
+\item \textbf{White-box Test Techniques (structure-based)}\\
+Analysis of the test object’s internal structure and processing. As the test cases are dependent on how the software is designed, they can only be created after the design or implementation of the test object.
 
 \begin{itemize}
     \item Statement testing
@@ -280,7 +281,7 @@ White-box test techniques (also known as structure-based techniques) are based o
 \end{itemize}
 
 \item \textbf{Experience-based Test Techniques}\\
-Experience-based test techniques effectively use the knowledge and experience of testers for the design and implementation of test cases. These test techniques depends on the tester’s skills.
+Use the knowledge and experience of testers for the design and implementation of test cases. These test techniques depends on the tester’s skills.
 
 \begin{itemize}
     \item Error guessing
@@ -303,7 +304,7 @@ The most common format for a user story is “As a [role], I want [goal to be ac
 \section*{Acceptance Criteria}
 Acceptance criteria for a user story are the conditions that an implementation of the user story must meet to be accepted by stakeholders.\\
 
-\section*{Acceptance Test-driven Development (ATDD)}
+\section*{Acceptance Test-driven Development}
 ATDD is a test-first approach. Test cases are created prior to implementing the user story. The test cases are based on the acceptance criteria and can be seen as examples of how the software works. Examples and tests are the same.
 }
 
@@ -490,6 +491,10 @@ Risks of test automation:
 
 %------------ Certification ---------------
 \fancybox{Certification}{
+
+\section*{ISTQB}
+The International Software Testing Qualifications Board (ISTQB) is a software testing certification board.\\
+
 \section*{Overview}
 The ISTQB Certified Tester Foundation Level (CTFL) certification is the cornerstone of essential testing knowledge that can be applied to real-world scenarios.\\
 
@@ -507,11 +512,70 @@ The ISTQB Certified Tester Foundation Level (CTFL) certification is the cornerst
 \item K2: Understand
 \item K3: Apply
 \end{itemize}
+
+\section*{Exam Structures Rules}
+\vspace{-10pt}
+\begin{table}[H]
+\renewcommand{\arraystretch}{2}
+\centering
+\begin{tabular}{|c|c|c|c|}
+\hline
+\rowcolor{black} \textcolor{white}{\textbf{K-Level}} & 
+\textcolor{white}{\textbf{No. of Questions}} & 
+\textcolor{white}{\textbf{Time}} & 
+\textcolor{white}{\textbf{Total Time}} \\ \hline
+K1                              & 8                                              & 1                                    & 8                       \\ \hline
+K2                              & 24                                             & 1                                    & 24                      \\ \hline
+K3                              & 8                                              & 3                                    & 24                      \\ \hline
+\hline
+\textbf{Total}                 & \textbf{40}                                    &                               & \textbf{56 min}             \\ \hline
+\end{tabular}
+\caption*{K-Level Breakdown and Total Time}
+\end{table}
+
+\begin{table}[H] 
+\renewcommand{\arraystretch}{2}
+\centering
+\begin{tabular}{|c|c|c|c|c|c|}
+\hline
+\cellcolor{black}\textcolor{white}{\textbf{Chapter}} & \cellcolor{black}\textcolor{white}{\textbf{K1}} & \cellcolor{black}\textcolor{white}{\textbf{K2}} & \cellcolor{black}\textcolor{white}{\textbf{K3}} & \cellcolor{black}\textcolor{white}{\textbf{Points}} & \cellcolor{black}\textcolor{white}{\textbf{Percentage}} \\ \hline
+\textbf{Chapter 1} & 2 & 6 & 0 & 8 & \textbf{13\%} \\ \hline
+\textbf{Chapter 2} & 1 & 4 & 0 & 5 & \textbf{8\%} \\ \hline
+\textbf{Chapter 3} & 1 & 3 & 1 & 5 & \textbf{8\%} \\ \hline
+\textbf{Chapter 4} & 1 & 5 & 5 & 11 & \textbf{18\%} \\ \hline
+\textbf{Chapter 5} & 2 & 5 & 2 & 9 & \textbf{15\%} \\ \hline
+\textbf{Chapter 6} & 1 & 1 & 0 & 2 & \textbf{3\%} \\ \hline \hline
+\textbf{Total} & 10 & 24 & 8 & 60 & 100\% \\ \hline
+\end{tabular} 
+\caption*{Question Breakdown by Chapter and K-Level}
+\end{table}
 }
 
 \fancybox{Keywords (K1)}{
-\phantom{text}
+\section*{Overview}
+All terms listed as keywords shall be remembered (K1), even if not explicitly mentioned in the learning objectives.\\
+
+\section*{1. Fundamentals of Testing}
+coverage, debugging, defect, error, failure, quality, quality assurance, root cause, test analysis, test basis, test case, test completion, test condition, test control, test data, test design, test execution, test implementation, test monitoring, test object, test objective, test planning, test procedure, test process, test result, testing, testware, traceability, validation, verification\\
+
+\section*{2. Testing Throughout the SDLC}
+acceptance testing, black-box testing, component integration testing, component testing, confirmation testing, functional testing, integration testing, maintenance testing, non-functional testing, regression testing, shift left, system integration testing, system testing, test level, test object, test type, white-box testing\\
+
+\section*{3. Static Testing}
+anomaly, dynamic testing, formal review, informal review, inspection, review, static analysis, static testing, technical review, walkthrough\\
+
+\section*{4. Test Analysis and Design}
+acceptance criteria, acceptance test-driven development, black-box test technique, boundary value analysis, branch coverage, checklist-based testing, collaboration-based test approach, coverage, coverage item, decision table testing, equivalence partitioning, error guessing, experience-based test technique, exploratory testing, state transition testing, statement coverage, test technique, white-box test technique\\
+
+\section*{5. Managing the Test Activities}
+defect management, defect report, entry criteria, exit criteria, product risk, project risk, risk, risk analysis, risk assessment, risk control, risk identification, risk level, risk management, risk mitigation, risk monitoring, risk-based testing, test approach, test completion report, test control, test monitoring, test plan, test planning, test progress report, test pyramid, test strategy, testing quadrants\\
+
+\section*{6. Test Tools}
+test automation
 }
+
+
+
 
 
 \end{multicols}
