--- a/istqb-ctfl-cheat-sheet.tex
+++ b/istqb-ctfl-cheat-sheet.tex
@@ -382,7 +382,7 @@ The test pyramid model shows that different tests have different levels of granu
 \begin{figure}[H]
   \begin{minipage}{0.45\textwidth}
     \centering
-    \includesvg[width=\textwidth]{pyramid.svg}
+    \includesvg[width=\textwidth]{images/pyramid.svg}
   \end{minipage}%
   \hspace{0.05\textwidth} % Adjust space between image and text
   \begin{minipage}{0.5\textwidth}
@@ -403,7 +403,7 @@ The test pyramid model shows that different tests have different levels of granu
 The testing quadrants group the test levels with the appropriate test types, activities, test techniques and work products in Agile software development.
 \vspace{-10pt}
 \begin{figure}[H]
-    \includegraphics[width=0.8\textwidth]{quadrants.png}
+    \includegraphics[width=0.8\textwidth]{images/quadrants.png}
     \vspace{-10pt}
 \end{figure}
 
@@ -580,7 +580,7 @@ BVA is a test technique based on exercising the boundaries of equivalence partit
 
 \vspace{-10pt}
 \begin{figure}[H]
-    \includegraphics[width=1\textwidth]{bva.png}
+    \includegraphics[width=1\textwidth]{images/bva.png}
     \vspace{-10pt}
 \end{figure}
     
